--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "axios": "^0.24.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
